Edição de proposta
